--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lorem Ipsum</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="section-center">
+        <h3>Funny Dummy text</h3>
+    </section>
     
 </body>
 </html>
