Index and style file is ready

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <section class="section-center">
         <h3>Funny Dummy text</h3>
+        <form class="lorem-form">
+            <label for="amount">Paragraphs:</label>
+            <input type="number" name="amount id="amount" placeholder="5">
+            <button type="submit" class="btn">Generate</button>
+        </form>
+        <article class="lorem-text"></article>
     </section>
     
 </body>
