--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </form>
         <article class="lorem-text"></article>
     </section>
+    <script src="app.js"></script>
     
 </body>
 </html>
